--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
 
 dependencies {
 
+    // Biblioteca para Operações da Calculadora
+    implementation 'net.objecthunter:exp4j:0.4.8'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
