--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,14 @@ dependencies {
 
     // Biblioteca para Operações da Calculadora
     implementation 'net.objecthunter:exp4j:0.4.8'
+    implementation 'androidx.test.ext:junit-ktx:1.1.4'
 
+    // Testes Unitarios:
+    testImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+
+
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
